...
    "apple": "Sign in with Apple",
    "signInAnotherWay": "Sign in another way",
    "bottomSheet": {
      "title": "Save your recovery phrase to create a wallet",
      "description": "We’re going to be supporting other email providers soon, but in the meanwhile you’ll have to save your recovery phrase to finish creating a wallet.",
      "continue": "Continue",
      "skip": "Skip (not recommended)"
    }
  },
  "keylessBackupPhoneInput": {
    "setup": {
      "title": "Next, add your phone number",
      "subtitle": "You’ll need to use this phone number to restore if you ever lose your wallet.\n\nWe’ll send you a code to verify that this number is yours."
...
  "testFaqLink": "{{appName}} FAQ",
  "termsOfServiceLink": "Terms of Service",
  "privacyPolicy": "Privacy Policy",
  "editProfile": "Edit Profile",
  "profileName": "Profile Name",
  "profile": "Profile",
  "confirmNumber": "Connect Phone Number",
  "cancel": "Cancel",
  "changeProfilePhoto": "Change Profile Photo",
  "name": "Name",
  "editName": "Edit Name",
  "submit": "Submit",
  "selectLanguage": "Select Language",
...
  "withdrawCeloAmount": "Amount (CELO)",
  "withdrawScanQrTitle": "Scan",
  "tokenBalance": "{{token}} Balance",
  "addFunds": "Add Funds",
  "addFundsHeaderWithCurrency": "Add {{token}}",
  "addFundsSubtitle": "Fund your {{appName}} account",
  "exchanges": "Exchanges",
  "noExchanges": "There are no exchanges available for {{digitalAsset}} in your region.",
  "buySellOnExchanges": "Buy/Sell on Exchanges",
  "cashOut": "Withdraw Funds",
  "cashOutSubtitle": "Spend on gift cards and other purchases or send funds to a crypto exchange",
  "cashOutComingSoon": "Cash Out (Coming Soon)",
  "spend": "Spend",
  "spendSubtitle": "Use your balance with supporting merchants",
  "amountCelo": "Amount (CELO)",
  "onlyCeloDollars": "cUSD only",
  "onlyCelo": "CELO only",
  "celoDollar": "Celo Dollar",
  "celoEuro": "Celo Euro",
...
  },
  "providerFeeDiscountDialog": {
    "title": "Fee Discount",
    "body": "As a promotion, fees are temporarily subsidized to celebrate the launch of {{appName}}!"
  },
  "pleaseSelectProvider": "Please select a provider below. These links connect to a third party service.",
  "otherFundingOptions": "For more ways to add and withdraw funds, visit <0>How to fund your account</0>",
  "youCanTransferIn": "You can use a third party exchange to send {{digitalAsset}} to your {{appName}} account. You'll need your Account Address for this.",
  "youCanTransferOut": "You can withdraw your funds by sending them to a third party exchange that supports {{digitalAsset}}.",
  "useBalanceWithMerchants": "Use your balance with supporting merchants",
  "findMerchants": "Find local merchants near you",
  "celoDeposit": "CELO Purchase",
  "cUsdDeposit": "cUSD Purchase",
...
  "helpFindAccount": "Help your contact find their Account Address",
  "close": "Close",
  "home": "Home",
  "accountKey": "Recovery Phrase",
  "walletSecurity": "Wallet Security",
  "addAndWithdraw": "Add & Withdraw",
  "settings": "Settings",
  "help": "Help",
  "dismiss": "Dismiss",
  "review": "Review",
  "insufficientBalance": "Your balance is too low to make this transaction",
  "insufficientBalanceStable": "You do not have enough cUSD or cEUR to complete this transaction",
  "amount": "Amount",
...
  },
  "verificationEducation": {
    "title": "Phone Number",
    "header": "Connect your phone number",
    "body": "To make sure your number is really yours, you’ll receive three SMS messages that will cost about 0.05 cUSD each.\n\nConnection takes about three minutes.",
    "feelessBody": "You will receive three messages to help securely connect your phone number. Connection takes about three minutes.",
    "start": "Start",
    "resume": "Resume",
    "doINeedToConfirm": "Do I need to connect?",
    "skipForNow": "Skip for now",
    "bodyInsufficientBalance": "Your current balance is not high enough to complete the confirmation process.\n\nPlease try again when you have added funds to your wallet.",
    "bodyAlreadyVerified": "Your number is already connected!"
  },
...
    },
    "cashOut": {
      "fiatExchangeTitle": "Withdraw Funds",
      "fiatExchangeSubtitle": "Get funds out of {{appName}} and into a bank account, card, crypto exchange or to mobile money.",
      "selectCurrencyTitle": "Withdraw Funds",
      "exchangeAmountTitle": "Withdraw {{currency}}",
      "selectProviderHeader": "Select Withdraw Method",
      "withdrawExchangeTitle": "Withdraw Crypto"
    },
    "spend": {
      "fiatExchangeTitle": "Spend Funds",
      "fiatExchangeSubtitle": "Spend on gift cards and other purchases.",
      "selectCurrencyTitle": "Spend Funds"
...
