...
    const pointsEnabled = getFeatureGate(StatsigFeatureGates.SHOW_POINTS)

    return (
      <ScrollView
        style={styles.scrollView}
        contentContainerStyle={styles.scrollContent}
        testID="scrollView"
      >
        <Logo size={32} />
        <Text style={styles.title}>{t('terms.title')}</Text>
        <Text style={styles.disclaimer}>
          <Trans i18nKey={'terms.info'}>
            <Text onPress={this.onPressGoToTerms} style={styles.link} />
...
            <Button
              style={[styles.button, insets && insets.bottom <= MARGIN && { marginBottom: MARGIN }]}
              type={BtnTypes.PRIMARY}
              size={BtnSizes.FULL}
              text={t('accept')}
              onPress={this.onPressAccept}
              testID={'AcceptTermsButton'}
            />
          )}
        </SafeAreaInsetsContext.Consumer>
      </SafeAreaView>
    )
  }
...
