...
          InputComponent={FormTextInput}
          style={styles.phoneNumberInput}
          value={internationalPhoneNumber}
          placeholder={numberPlaceholder}
          keyboardType="phone-pad"
          textContentType="telephoneNumber"
          testID="PhoneNumberField"
          validator={ValidatorKind.Phone}
          countryCallingCode={countryCallingCode}
          onFocus={requestPhoneNumberIfNecessary}
          onChangeText={onChangePhoneNumber}
          editable={editable}
          showClearButton={false}
...
