...
        <Button
          onPress={onPressCreateAccount}
          text={t('welcome.createNewWallet')}
          size={BtnSizes.FULL}
          type={BtnTypes.PRIMARY}
          style={styles.createAccountButton}
          testID={'CreateAccountButton'}
          disabled={buttonsDisabled}
        />
        <Button
          onPress={onPressRestoreAccount}
          text={t('welcome.hasWalletV1_88')}
          size={BtnSizes.FULL}
...
