...
  return (
    <View style={styles.viewContainer}>
      <ScrollView
        horizontal={true}
        showsHorizontalScrollIndicator={false}
        contentContainerStyle={styles.carouselContainer}
        testID={'HomeActionsCarousel'}
      >
        {ENABLED_QUICK_ACTIONS.map((name) => ({ ...actions[name], name }))
          .filter(({ hidden }) => !hidden)
          .map(({ name, title, icon, onPress }) => (
            <Card
              style={styles.card}
...
